# mutli-agent-research-assisstant

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rxconfig.py
app/: app.py  pdf_export.py  report_formatting.py  research_assistant.py  state.py
