[project]
name = "mutli-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.2",
    "olostep>=1.1.0",
    "openai-agents>=0.17.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reflex>=0.9.3",
    "reportlab>=4.5.1",
]
